workshops/12_pipeline/deploy/service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: json-server-deployment
  labels:
    app: json-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: json-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: json-server
    spec:
      containers:
      - name: json-server
        image: srank123/my_json_server
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: json-server-service
spec:
  type: ClusterIP
  selector:
    app: json-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
